# lambda-football-scraper

./: .dockerignore  .gitignore  Dockerfile  README.md  bucket_access.py  handler.py  logger_config.py  pyproject.toml  scraper.py
